Fixed bug #60112 If URI does not contain a file, index.php is not served This is a windows Issue. and after this fix, previously 404 request like "localhost/foo/bar" now could server correctly with request_uri "index.php" and PATH_INFO "/foo/bar/"

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@318332 c90b9560-bf6c-de11-be94-00142212c4b1